PostとUserのCRUD機能を作成

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>昆虫マップ</title>
+    <title>生き物マップ</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -17,6 +17,9 @@
         <%= link_to '投稿フォーム', new_post_path, "data-turbolinks": false%>
       </li>
       <li>
+        <%= link_to 'マイページ', user_path(current_user.id) %>    
+      </li>
+      <li>
         <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
       </li>
     <% else %>
@@ -29,5 +32,8 @@
     <% end %>
   </header>
     <%= yield %>
+  <footer>
+    <p>フッター</p>
+  </footer>
   </body>
 </html>
