--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,2 +1,11 @@
-<h1>Posts#index</h1>
-<p>Find me in app/views/posts/index.html.erb</p>
+<% @posts.each do |post| %>
+  <div>
+    <%= link_to post_path(post.id) do %>
+      <%= image_tag post.get_image(400, 400) %>
+    <% end %>
+    <p>投稿ユーザー画像：<%= image_tag post.user.get_profile_image(100,100) %></p>
+    <p>生き物の名前：<%= post.creature_name %></p>
+    <p>説明：<%= post.caption %></p>
+    <p>ユーザーネーム：<%= post.user.name %></p>
+  </div>
+<% end %>
