--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,13 +1,19 @@
-
-<div id="map"></div>
-
-
 <h1>画像投稿フォーム</h1>
+
+<% if @post.errors.any? %>
+  <%= @post.errors.count %>件のエラーが発生しました
+  <ul>
+    <% @post.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+  </ul>
+<% end %>
+
 <%= form_with model: @post do |f| %>
   <h4>画像</h4>
   <%= f.file_field :image, accept: "image/*" %>
-  <h4>生き物名</h4>
-  <%= f.text_field :insect_name %>
+  <h4>生き物の名前</h4>
+  <%= f.text_field :creature_name %>
   <h4>説明</h4>
   <%= f.text_area :caption %>
   <h4>緯度</h4>
@@ -16,5 +22,10 @@
   <%= f.number_field :longitude, id:'keido', step: "0.00000000000000001" %>
   <%= f.submit '投稿' %>
 <% end %>
+
+<div>地図を検索 （例：広島県福山市）</div>
+<input type="text" id="keyword"><button id="search">検索実行</button>
+<div id="target"></div>
+<div id="map"></div>
 
 <%= javascript_pack_tag 'map', 'data-turbolinks-track': 'reload' %>
