--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -7,5 +7,6 @@
     <p>生き物の名前：<%= post.creature_name %></p>
     <p>説明：<%= post.caption %></p>
     <p>ユーザーネーム：<%= post.user.name %></p>
+    <p><%= link_to "#{post.post_comments.count} コメント", post_path(post.id) %></p>
   </div>
 <% end %>
