--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -16,6 +16,8 @@
   <%= f.text_field :creature_name %>
   <h4>説明</h4>
   <%= f.text_area :caption %>
+  <h4>場所</h4>
+  <%= f.text_field :address, id:"address" %>
   <h4>緯度</h4>
   <%= f.number_field :latitude, id:"ido", step: "0.00000000000000001" %>
   <h4>経度</h4>
