--- a/app/views/posts/_list.html.erb
+++ b/app/views/posts/_list.html.erb
@@ -1,4 +1,4 @@
-<% @posts.each do |post| %>
+<% posts.each do |post| %>
 <div>
   <%= link_to post_path(post.id) do %>
     <%= image_tag post.get_image(400, 400) %>
@@ -11,3 +11,5 @@
   <p><%= link_to "#{post.post_comments.count} コメント", post_path(post.id) %></p>
 </div>
 <% end %>
+
+<%= paginate posts %>
