--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container mt-4 mb-4">
   <h1>画像投稿フォーム</h1>
   <% if @post.errors.any? %>
     <%= @post.errors.count %>件のエラーが発生しました
