エラー修正

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -53,6 +53,7 @@
       </nav>
     </header>
     <main class="mb-auto">
+    <%= render 'layouts/flash_messages' %>
     <%= yield %>
     </main>
     <footer class="bg-dark pt-5 pb-3">
