名前でログインできるようにした

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,7 +1,6 @@
 <div class="container py-3">
   <h4 style="color: #806E40; border-bottom: 2px solid #806E40;" >みんなの生き物</h4>
-  <div class="d-flex justify-content-center py-5" style="background-color: #F6F4EA;">
-    <div class="card-group">
+  <div class="d-flex justify-content-center justify-content-md-around py-4 px-md-3 flex-wrap" style="background-color: #F6F4EA;">
     <% @posts.each do |post| %>
       <div>
         <%= link_to post_path(post.id) do %>
@@ -10,12 +9,8 @@
         <% end %>
       </div>
     <% end %>
-
-    </div>
   </div>
-  <div>
-    <%= paginate @posts %>
-  </div>
+  <%= paginate @posts %>
 </div>
 
 
