--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,7 +1,7 @@
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/exif-js/2.2.1/exif.min.js"></script>
 <div class="container mt-4 mb-4">
-  <h5 class="text-dark bg-light p-4 mb-0">画像投稿フォーム</h5>
+  <h5 class="bg-light p-4 mb-0" style="color: #806E40; border-bottom: 2px solid #806E40;">画像投稿フォーム</h5>
   <div class="form-body p-4">
     <% if @post.errors.any? %>
       <%= @post.errors.count %>件のエラーが発生しました
