--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -56,7 +56,7 @@
     <%= render 'layouts/flash_messages' %>
     <%= yield %>
     </main>
-    <footer class="bg-dark pt-5 pb-3">
+    <footer class="pt-5 pb-3">
       <div class="container text-center">
         <p class="text-white">Copyright © takokke. All Rights Reserved.</p>
       </div>
