--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -48,7 +48,7 @@
               <%= f.number_field :longitude, id:'keido', class:'form-control', step: "0.00000000000000001" %>
             </div>
           </div>
-          <%= f.submit '投稿', class:"btn btn-lg btn-block btn-success mt-4" %>
+          <%= f.submit '投稿', class:"btn btn-lg btn-block mt-4" %>
         <% end %>
       </div>
       <div class="col-md-6">
@@ -64,7 +64,6 @@
 
         </div>
 
-        <!--<div id="target"></div>-->
         <div id="map"></div>
       </div>
     </div>
