--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,34 +1,48 @@
-<h2>Sign up</h2>
+<div class="container mt-4 mb-4">
+  <div class="row no-gutters">
+    <div class="col-sm-10 col-md-6 mx-2 mx-sm-auto text-center shadow-lg rounded py-4 px-3">
+      <h5>新規登録</h5>
 
-<%= form_with model: @user, url: user_registration_path do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
-  
-  <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
+      <%= form_with model: @user, url: user_registration_path do |f| %>
+        <%= render "devise/shared/error_messages", resource: resource %>
+
+        <div class="form-group">
+          <div class="input-group mt-4 mb-3">
+            <div class="input-group-prepend">
+              <span class="input-group-text" area-hidden="true"><i class="fa-solid fa-user"></i></span>
+            </div>
+            <%= f.text_field :name, autofocus: true, placeholder: "名前", autocomplete: "name", class:"form-control" %>
+          </div>
+
+          <div class="form-group">
+            <div class="input-group mt-4 mb-3">
+            <div class="input-group-prepend">
+              <span class="input-group-text" area-hidden="true"><i class="fa-solid fa-envelope"></i></span>
+            </div>
+              <%= f.email_field :email, autofocus: true, placeholder: "メールアドレス",autocomplete: "email", class:"form-control" %>
+            </div>
+          </div>
+
+          <div class="field">
+            <%= f.label :password %>
+            <% if @minimum_password_length %>
+            <em>(<%= @minimum_password_length %> characters minimum)</em>
+            <% end %><br />
+            <%= f.password_field :password, autocomplete: "new-password" %>
+          </div>
+
+          <div class="field">
+            <%= f.label :password_confirmation %><br />
+            <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+          </div>
+
+          <div class="actions">
+            <%= f.submit "登録", class:'btn'%>
+          </div>
+        </div>
+      <% end %>
+
+      <%= render "devise/shared/links" %>
+    </div>
   </div>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @minimum_password_length %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-  </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up" %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+</div>
