--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,7 +1,7 @@
 <div class="container mt-4 mb-4">
   <div class="row no-gutters">
     <div class="col-sm-10 col-md-6 mx-2 mx-sm-auto text-center shadow-lg rounded py-4 px-3">
-      <h5>新規登録</h5>
+      <h5 class="bg-light py-4">新規登録</h5>
 
       <%= form_with model: @user, url: user_registration_path do |f| %>
         <%= render "devise/shared/error_messages", resource: resource %>
@@ -23,17 +23,25 @@
             </div>
           </div>
 
-          <div class="field">
-            <%= f.label :password %>
-            <% if @minimum_password_length %>
-            <em>(<%= @minimum_password_length %> characters minimum)</em>
-            <% end %><br />
-            <%= f.password_field :password, autocomplete: "new-password" %>
+          <div class="form-group">
+            <div class="input-group mt-4 mb-3">
+              <div class="input-group-prepend">
+                <span class="input-group-text" area-hidden="true"><i class="fa-solid fa-lock"></i></span>
+              </div>
+              <% if @minimum_password_length %>
+                <%= f.password_field :password, placeholder:"パスワード(#{ @minimum_password_length }文字以上)", autocomplete: "new-password", class:"form-control"%>
+              <% else %>
+                <%= f.password_field :password, placeholder:"パスワード", autocomplete: "new-password", class:"form-control"%>
+              <% end %>
           </div>
 
-          <div class="field">
-            <%= f.label :password_confirmation %><br />
-            <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+          <div class="form-gruop">
+            <div class="input-group mt-4 mb-3">
+              <div class="input-group-prepend">
+                <span class="input-group-text" area-hidden="true"><i class="fa-solid fa-circle-check"></i></span>
+              </div>
+            <%= f.password_field :password_confirmation, placeholder:"パスワード確認", autocomplete: "new-password", class: "form-control" %>
+            </div>
           </div>
 
           <div class="actions">
@@ -41,7 +49,6 @@
           </div>
         </div>
       <% end %>
-
       <%= render "devise/shared/links" %>
     </div>
   </div>
