posts/showに地図を作成：途中

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -43,3 +43,5 @@
     <%= f.submit "送信する" %>
   <% end %>
 </div>
+<div id="map"></div>
+<%= javascript_pack_tag 'map', 'data-turbolinks-track': 'reload' %>
