--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,54 +2,56 @@
   <div class="row no-gutters">
     <div class="col-sm-10 col-md-6 mx-2 mx-sm-auto text-center shadow-lg rounded py-4 px-3">
       <h5 class="bg-light py-4">新規登録</h5>
-
-      <%= form_with model: @user, url: user_registration_path do |f| %>
-        <%= render "devise/shared/error_messages", resource: resource %>
-
-        <div class="form-group">
-          <div class="input-group mt-4 mb-3">
-            <div class="input-group-prepend">
-              <span class="input-group-text" area-hidden="true"><i class="fa-solid fa-user"></i></span>
-            </div>
-            <%= f.text_field :name, autofocus: true, placeholder: "名前", autocomplete: "name", class:"form-control" %>
-          </div>
-
-          <div class="form-group">
-            <div class="input-group mt-4 mb-3">
-            <div class="input-group-prepend">
-              <span class="input-group-text" area-hidden="true"><i class="fa-solid fa-envelope"></i></span>
-            </div>
-              <%= f.email_field :email, autofocus: true, placeholder: "メールアドレス",autocomplete: "email", class:"form-control" %>
-            </div>
-          </div>
-
-          <div class="form-group">
-            <div class="input-group mt-4 mb-3">
-              <div class="input-group-prepend">
-                <span class="input-group-text" area-hidden="true"><i class="fa-solid fa-lock"></i></span>
-              </div>
-              <% if @minimum_password_length %>
-                <%= f.password_field :password, placeholder:"パスワード(#{ @minimum_password_length }文字以上)", autocomplete: "new-password", class:"form-control"%>
-              <% else %>
-                <%= f.password_field :password, placeholder:"パスワード", autocomplete: "new-password", class:"form-control"%>
-              <% end %>
-          </div>
-
-          <div class="form-gruop">
-            <div class="input-group mt-4 mb-3">
-              <div class="input-group-prepend">
-                <span class="input-group-text" area-hidden="true"><i class="fa-solid fa-circle-check"></i></span>
-              </div>
-            <%= f.password_field :password_confirmation, placeholder:"パスワード確認", autocomplete: "new-password", class: "form-control" %>
-            </div>
-          </div>
-
-          <div class="actions">
-            <%= f.submit "登録", class:'btn'%>
-          </div>
+      <div class="form-body p-4">
+        <div class="mx-auto text-center">
+          <p>ユーザ名と<br>パスワードを入力してください。</p>
         </div>
-      <% end %>
-      <%= render "devise/shared/links" %>
+        <%= form_with model: @user, url: user_registration_path do |f| %>
+          <%= render "devise/shared/error_messages", resource: resource %>
+          
+            <div class="input-group mt-4 mb-3">
+              <div class="input-group-prepend">
+                <span class="input-group-text" area-hidden="true"><i class="fa-solid fa-user"></i></span>
+              </div>
+              <%= f.text_field :name, autofocus: true, placeholder: "名前", autocomplete: "name", class:"form-control" %>
+            </div>
+  
+            <div class="form-group">
+              <div class="input-group mt-4 mb-3">
+              <div class="input-group-prepend">
+                <span class="input-group-text" area-hidden="true"><i class="fa-solid fa-envelope"></i></span>
+              </div>
+                <%= f.email_field :email, autofocus: true, placeholder: "メールアドレス",autocomplete: "email", class:"form-control" %>
+              </div>
+            </div>
+  
+            <div class="form-group">
+              <div class="input-group mt-4 mb-3">
+                <div class="input-group-prepend">
+                  <span class="input-group-text" area-hidden="true"><i class="fa-solid fa-lock"></i></span>
+                </div>
+                <% if @minimum_password_length %>
+                  <%= f.password_field :password, placeholder:"パスワード(#{ @minimum_password_length }文字以上)", autocomplete: "new-password", class:"form-control"%>
+                <% else %>
+                  <%= f.password_field :password, placeholder:"パスワード", autocomplete: "new-password", class:"form-control"%>
+                <% end %>
+            </div>
+  
+            <div class="form-gruop">
+              <div class="input-group mt-4 mb-3">
+                <div class="input-group-prepend">
+                  <span class="input-group-text" area-hidden="true"><i class="fa-solid fa-circle-check"></i></span>
+                </div>
+              <%= f.password_field :password_confirmation, placeholder:"パスワード確認", autocomplete: "new-password", class: "form-control" %>
+              </div>
+            </div>
+  
+            <div class="actions">
+              <%= f.submit "登録", class:'btn'%>
+            </div>
+        <% end %>
+        <%= render "devise/shared/links" %>
+      </div>
     </div>
   </div>
 </div>
