packのmapとexifをapplication.jsから消した

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -67,3 +67,4 @@
   </div>
 </div>
 <%= javascript_pack_tag 'map', 'data-turbolinks-track': 'reload' %>
+<%= javascript_pack_tag 'exif', 'data-turbolinks-track': 'reload' %>
