--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,4 +1,5 @@
-<div>
+<div class="container">
+  <div id="map"></div>
   <%= image_tag @post.get_image(300,300) %>
   <p>生き物の名前：<%= @post.creature_name %></p>
   <p>場所：<%= @post.address %></p>
@@ -23,25 +24,23 @@
       <% end %>
     </p>
   <% end %>
-</div>
-
-<div>
-  <p>コメント件数:<%= @post.post_comments.count %></p>
-  <% @post.post_comments.each do |post_comment| %>
-    <p><%= image_tag post_comment.user.get_profile_image(100,100) %></p>
-    <%= post_comment.user.name %>
-    <%= post_comment.created_at.strftime('%Y/%m/%d') %><%= post_comment.comment %>
-    <% if post_comment.user == current_user %>
-      <%= link_to "削除", post_post_comment_path(post_comment.post, post_comment), method: :delete %>
+  <div>
+    <p>コメント件数:<%= @post.post_comments.count %></p>
+    <% @post.post_comments.each do |post_comment| %>
+      <p><%= image_tag post_comment.user.get_profile_image(100,100) %></p>
+      <%= post_comment.user.name %>
+      <%= post_comment.created_at.strftime('%Y/%m/%d') %><%= post_comment.comment %>
+      <% if post_comment.user == current_user %>
+        <%= link_to "削除", post_post_comment_path(post_comment.post, post_comment), method: :delete %>
+      <% end %>
     <% end %>
-  <% end %>
+  </div>
+  
+  <div>
+    <%= form_with model: [@post, @post_comment] do |f| %>
+      <%= f.text_area :comment, rows: '5', placeholder: "コメントをここに" %>
+      <%= f.submit "送信する" %>
+    <% end %>
+  </div>
 </div>
-
-<div>
-  <%= form_with model: [@post, @post_comment] do |f| %>
-    <%= f.text_area :comment, rows: '5', placeholder: "コメントをここに" %>
-    <%= f.submit "送信する" %>
-  <% end %>
-</div>
-<div id="map"></div>
 <%= javascript_pack_tag 'map', 'data-turbolinks-track': 'reload' %>
