--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -12,5 +12,18 @@
   </div>
   <%= paginate @posts %>
 </div>
+<div id="map"></div>
+<script>
+let map;
+async function initMap() {
+  console.log("マップ生成開始")
+  const { Map } = await google.maps.importLibrary("maps");
 
-
+  map = new Map(document.getElementById("map"), {
+    center: { lat: 34.6648863, lng: 133.916252 },
+    zoom: 15,
+    mapTypeControl: true
+  });
+}
+</script>
+<script src="https://maps.googleapis.com/maps/api/js?key=<%= Rails.application.credentials[:googlemaps][:api_key]%>&callback=initMap" async defer></script>
