投稿詳細画面修正

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,5 +1,5 @@
 <div class="container py-3">
-  <h4 style="color: #806E40; border-bottom: 2px solid #806E40;" >みんなの生き物</h4>
+  <h4 style="color: #806E40; border-bottom: 2px solid #806E40;" >みんなの投稿</h4>
   <div class="d-flex justify-content-center justify-content-md-around py-4 px-md-3 flex-wrap" style="background-color: #F6F4EA;">
     <% @posts.each do |post| %>
       <div>
