--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,2 +1,14 @@
-<h1>Homes#top</h1>
-<p>Find me in app/views/homes/top.html.erb</p>
+<div class="container mt-5">
+    <div class="btn-wrapper col-10 col-md-6 mx-auto">
+        <div class="row">
+            <%= link_to "ゲストログイン（閲覧用）", users_guest_sign_in_path, class: "btn btn-secondary btn-sm btn-block mb-3 sign_in", method: :post %>
+        </div>
+        <div class="row">
+            <%= link_to "ログイン",new_user_session_path, class: "btn btn-info btn-sm btn-block mb-3 sign_in" %>
+        </div>
+        <div class="row">
+            <%= link_to "新規登録",new_user_registration_path, class: "btn btn-success btn-sm btn-block sign_up" %>
+        </div>
+    </div>
+</div>
+
