--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,7 +2,7 @@
   <h3><%= @user.name %></h3>
   <%= image_tag @user.get_profile_image(100,100) %>
 
-  <% if !user.guest_user? && @user == current_user%>
+  <% if !@user.guest_user? && @user == current_user%>
     <p><%= link_to "プロフィール編集", edit_user_path %></p>
   <% end %>
 </div>
