--- a/app/views/favorites/_favorite-btn.html.erb
+++ b/app/views/favorites/_favorite-btn.html.erb
@@ -1,13 +1,9 @@
 <% if post.favorited_by?(current_user) %>
-  <p>
-    <%= link_to post_favorite_path(post), method: :delete, remote: true do %>
-      ♥<%= post.favorites.count %> いいね
-    <% end %>
-  </p>
-  <% else %>
-  <p>
-    <%= link_to post_favorite_path(post), method: :post, remote: true do %>
-      ♡<%= post.favorites.count %> いいね
-    <% end %>
-  </p>
+  <%= link_to post_favorite_path(post), method: :delete, remote: true do %>
+    <i class="fa-solid fa-heart" aria-hidden="true"></i> <%= @post.favorites.count %>
+  <% end %>
+<% else %>
+  <%= link_to post_favorite_path(post), method: :post, remote: true do %>
+    <i class="fa-regular fa-heart" aria-hidden="true"></i> <%= @post.favorites.count %>
+  <% end %>
 <% end %>
