--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -35,7 +35,7 @@
         <% end %>
         <div>
           <%= form_with model: [@post, @post_comment] do |f| %>
-            <%= f.text_area :comment, rows: '5', placeholder: "コメントをここに" %>
+            <%= f.text_area :comment, rows: '5', placeholder: "コメントをここに", required: true %>
             <%= f.submit "送信する" %>
           <% end %>
         </div>
