--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,46 +1,64 @@
 <div class="container">
   <div class="row">
-    <div class="shadow-lg mx-auto my-4 px-0 col-11 col-md-6">
-      <div id="map"></div>
-      <div class="row mt-3 mx-auto">
-        <div class="col-3 text-center">
-          <%= image_tag @post.user.get_profile_image(60,60), class:'rounded-circle'%>
-          <p><i class="fas fa-user"></i><%= @post.user.name %></p>
-        </div>
-        <div class="col-8 offset-1">
+    <div class="shadow-lg mx-auto my-4 px-0">        
+      <div class="py-2 ml-2">
+          <%= image_tag @post.user.get_profile_image(50,50), class:'rounded-circle mr-3'%><strong style="font-size: 20px;"><%= @post.user.name %></strong>
+      </div>
+      <div id="map">
+      </div>
+      <div class="row mt-3">
+        <div class="col-10 offset-1">
           <p>
-            <strong><i class="fa-solid fa-seedling"></i><span> <%= @post.creature_name %></span></strong>
+            <i class="fa-regular fa-calendar-days" aria-hidden="true"></i><span>  <%= @post.created_at.strftime('%Y/%m/%d') %></span>
+          </p>          
+          <p>
+            <i class="fa-solid fa-location-dot" aria-hidden="true"></i><span> <%= @post.address %></span>
           </p>
-          <span><%= @post.created_at.strftime('%Y/%m/%d') %> ｜ </span>
-          <span><i class="fa-solid fa-comment" aria-hidden="true"></i> <%= @post.post_comments.count %> ｜ </span>
-          <span id="favorite_btn_<%= @post.id %>">
-            <%= render 'favorites/favorite-btn', post: @post %>
-          </span>
+          <div class="row">
+            <div class="col-1">
+              <i class="fa-solid fa-envelope-open" aria-hidden="true"></i>
+            </div>
+            <div class="col-11 p-0">
+              <%= @post.caption %>
+            </div>            
+          </div>
+          <div class="py-3">
+            <span id="comment_count"><%= render 'post_comments/count', post: @post %></span>
+            <span id="favorite_btn_<%= @post.id %>">
+              <%= render 'favorites/favorite-btn', post: @post %>
+            </span>            
+          </div>
+
         </div>
       </div>
-      <p>場所：<%= @post.address %></p>
-      <p>説明：<%= @post.caption %></p>
-      <% if @post.user == current_user %>
-        <%= link_to "編集", edit_post_path(@post) %>
-        <%= link_to "削除", post_path(@post), method: :delete, data: { confirm: "投稿を削除してもよろしいですか？" }%>
-      <% end %>
-        <p>コメント件数:<%= @post.post_comments.count %></p>
-        <% @post.post_comments.each do |post_comment| %>
-          <p><%= image_tag post_comment.user.get_profile_image(100,100) %></p>
-          <%= post_comment.user.name %>
-          <%= post_comment.created_at.strftime('%Y/%m/%d') %><%= post_comment.comment %>
-          <% if post_comment.user == current_user %>
-            <%= link_to "削除", post_post_comment_path(post_comment.post, post_comment), method: :delete%>
-          <% end %>
-        <% end %>
-        <div>
-          <%= form_with model: [@post, @post_comment] do |f| %>
-            <%= f.text_area :comment, rows: '5', placeholder: "コメントをここに", required: true %>
-            <%= f.submit "送信する" %>
+      <div class="row">
+        <div class="col-10 mx-auto">
+          <% if @post.user == current_user %>
+            <%= link_to "編集", edit_post_path(@post), class:"btn btn-success" %>
+            <%= link_to "削除", post_path(@post), method: :delete, data: { confirm: "投稿を削除してもよろしいですか？" }, class:"btn btn-danger"%>
           <% end %>
         </div>
+
       </div>
-    </div>
+      <!--コメント投稿欄-->
+      <div class="row my-3">
+        <div class="col-10  mx-auto ">
+          <%= form_with model: [@post, @post_comment], local: false do |f| %>
+            <div>
+              <%= f.text_area :comment, rows: '5', placeholder: "コメントをここに", class: "form-control", id: "comment_textarea", required: true %>
+            </div>
+            <div class="mt-2">
+              <%= f.submit "送信する", class:"btn" %>
+            </div>
+          <% end %>          
+        </div>
+      </div>
+      <!-- コメント一覧表示 -->
+      <div id="comment_index">
+        <%= render 'post_comments/index', post: @post %>
+      </div>
+    </div>    
   </div>
+
 </div>
 <%= javascript_pack_tag 'map', 'data-turbolinks-track': 'reload' %>
