users#showレイアウト修正

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <div class="shadow-lg mx-auto my-4 px-0">        
+    <div class="shadow-lg mx-auto col-10 col-md-8 col-lg-6  my-4 px-0">        
       <div class="py-2 ml-2">
           <%= image_tag @post.user.get_profile_image(50,50), class:'rounded-circle mr-3'%><strong style="font-size: 20px;"><%= @post.user.name %></strong>
       </div>
