--- a/app/javascript/stylesheets/application.scss
+++ b/app/javascript/stylesheets/application.scss
@@ -10,14 +10,14 @@ body {
   color: $text-color;
 }
 
-input[type="submit"] {
-  background-color: $main-color;
-  color: #fff;
-}
-
 a {
   color: $text-color;
+  &:hover {
+    color: $text-color;
+    text-decoration: none;
+  }
 }
+
 
 i {
   color: $text-color;
