--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,6 @@
 <div class="container mt-4 mb-4">
   <div class="row no-gutters">
-    <div class="col-sm-10 col-md-6 mx-2 mx-sm-auto text-center shadow-lg rounded py-4 px-3">
+    <div class="col-sm-10 col-md-6 mx-2 mx-sm-auto text-center rounded py-4 px-3">
       <h5 class="bg-light py-4">新規登録</h5>
       <div class="form-body p-4">
         <div class="mx-auto text-center">
@@ -18,9 +18,9 @@
   
             <div class="form-group">
               <div class="input-group mt-4 mb-3">
-              <div class="input-group-prepend">
-                <span class="input-group-text" area-hidden="true"><i class="fa-solid fa-envelope"></i></span>
-              </div>
+                <div class="input-group-prepend">
+                  <span class="input-group-text" area-hidden="true"><i class="fa-solid fa-envelope"></i></span>
+                </div>
                 <%= f.email_field :email, autofocus: true, placeholder: "メールアドレス",autocomplete: "email", class:"form-control" %>
               </div>
             </div>
@@ -42,12 +42,12 @@
                 <div class="input-group-prepend">
                   <span class="input-group-text" area-hidden="true"><i class="fa-solid fa-circle-check"></i></span>
                 </div>
-              <%= f.password_field :password_confirmation, placeholder:"パスワード確認", autocomplete: "new-password", class: "form-control" %>
+                <%= f.password_field :password_confirmation, placeholder:"パスワード確認", autocomplete: "new-password", class: "form-control" %>
               </div>
             </div>
   
             <div class="actions">
-              <%= f.submit "登録", class:'btn'%>
+              <%= f.submit "登録", class:'btn btn-success'%>
             </div>
         <% end %>
       </div>
