--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -46,7 +46,7 @@
               <%= f.number_field :longitude, id:'lng-input', class:'form-control', step: "0.00000000000000001" %>
             </div>
           </div>
-          <%= f.submit '投稿', class:"btn btn-lg btn-block mt-4" %>
+          <%= f.submit '投稿', class:"btn btn-lg btn-success btn-block mt-4" %>
         <% end %>
       </div>
       <div class="col-md-6">
