--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,27 +1,25 @@
 <div class="container">
   <div class="row">
-    <div class="shadow-lg mx-auto col-10 col-md-8 col-lg-6  my-4 px-0">        
-      <div class="py-2 ml-2">
+    <div class="mx-auto col-11 col-md-8 col-lg-7 col-xl-6  my-4 px-0">        
+      <div class="py-2 pl-2">
           <%= image_tag @post.user.get_profile_image(50,50), class:'rounded-circle mr-3'%><strong style="font-size: 20px;"><%= @post.user.name %></strong>
       </div>
       <div id="map">
       </div>
       <div class="row mt-3">
-        <div class="col-10 offset-1">
+        <div class="col-10 mx-auto">
           <p>
             <i class="fa-regular fa-calendar-days" aria-hidden="true"></i><span>  <%= @post.created_at.strftime('%Y/%m/%d') %></span>
           </p>          
           <p>
             <i class="fa-solid fa-location-dot" aria-hidden="true"></i><span> <%= @post.address %></span>
           </p>
-          <div class="row">
-            <div class="col-1">
-              <i class="fa-solid fa-envelope-open" aria-hidden="true"></i>
-            </div>
-            <div class="col-11 p-0">
-              <%= @post.caption %>
-            </div>            
-          </div>
+          <p class="m-0">
+            <i class="fa-solid fa-envelope-open" aria-hidden="true"></i>
+          </p>
+          <p>
+            <span><%= @post.caption %></span>    
+          </p>
           <div class="py-3">
             <span id="comment_count"><%= render 'post_comments/count', post: @post %></span>
             <span id="favorite_btn_<%= @post.id %>">
