--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -9,7 +9,7 @@
       <div class="row mt-3">
         <div class="col-10 mx-auto">
           <p>
-            <i class="fa-regular fa-calendar-days" aria-hidden="true"></i><span>  <%= @post.created_at.strftime('%Y/%m/%d') %></span>
+            <i class="fa-regular fa-calendar-days" aria-hidden="true"></i><span>  <%= @post.discover_date.strftime('%Y/%m/%d') %></span>
           </p>          
           <p>
             <i class="fa-solid fa-location-dot" aria-hidden="true"></i><span> <%= @post.address %></span>
